--- a/templates/UsedItem/search.html
+++ b/templates/UsedItem/search.html
@@ -23,10 +23,12 @@
         </div>
         <div>
             <div class="option">
-                <span>기본 | 낮은금액순 | 높은금액순</span>
-                <!-- <button onclick="sortProducts('basic')">기본순</button>
-                <button onclick="sortProducts('low_price')">낮은금액순</button>
-                <button onclick="sortProducts('high_price')">높은금액순</button> -->
+                <!-- <span>기본 | 낮은금액순 | 높은금액순</span> -->
+                <button class="filter_btn" onclick="sortProducts('basic')">기본순</button>
+                <hr class="filter_bar">
+                <button class="filter_btn" onclick="sortProducts('low_price')">낮은금액순</button>
+                <hr class="filter_bar">
+                <button class="filter_btn" onclick="sortProducts('high_price')">높은금액순</button>
             </div>
             <div class="contents_wrapper">
 
