--- a/templates/UsedItem/search.html
+++ b/templates/UsedItem/search.html
@@ -182,13 +182,13 @@
                 dangRslt = [...danggeun]
                 joongRslt = [...joongna]
                 if(type === 'low'){             // 낮음 금액순(오름차순)
-                    bunRslt.sort((a, b) => parseFloat(a.price.replace(',', '').replace('원', '')) - parseFloat(b.price.replace(',', '').replace('원', '')));
-                    dangRslt.sort((a, b) => parseFloat(a.price.replace(',', '').replace('원', '')) - parseFloat(b.price.replace(',', '').replace('원', '')));
-                    joongRslt.sort((a, b) => parseFloat(a.price.replace(',', '').replace('원', '')) - parseFloat(b.price.replace(',', '').replace('원', '')));
+                    bunRslt.sort((a, b) => parseInt(a.price.replace(',', '').replace('원', '')) - parseInt(b.price.replace(',', '').replace('원', '')));
+                    dangRslt.sort((a, b) => parseInt(a.price.replace(',', '').replace('원', '')) - parseInt(b.price.replace(',', '').replace('원', '')));
+                    joongRslt.sort((a, b) => parseInt(a.price.replace(',', '').replace('원', '')) - parseInt(b.price.replace(',', '').replace('원', '')));
                 } else if(type === 'high'){     // 높은 금액순(내림차순)
-                    bunRslt.sort((a, b) => parseFloat(b.price.replace(',', '').replace('원', '')) - parseFloat(a.price.replace(',', '').replace('원', '')));
-                    dangRslt.sort((a, b) => parseFloat(b.price.replace(',', '').replace('원', '')) - parseFloat(a.price.replace(',', '').replace('원', '')));
-                    joongRslt.sort((a, b) => parseFloat(b.price.replace(',', '').replace('원', '')) - parseFloat(a.price.replace(',', '').replace('원', '')));
+                    bunRslt.sort((a, b) => parseInt(b.price.replace(',', '').replace('원', '')) - parseInt(a.price.replace(',', '').replace('원', '')));
+                    dangRslt.sort((a, b) => parseInt(b.price.replace(',', '').replace('원', '')) - parseInt(a.price.replace(',', '').replace('원', '')));
+                    joongRslt.sort((a, b) => parseInt(b.price.replace(',', '').replace('원', '')) - parseInt(a.price.replace(',', '').replace('원', '')));
                 }
             }
             renderItems(bunRslt, 'bunjang')
@@ -221,8 +221,8 @@
             console.log('엑셀로 저장하기')
             fetch('/excelSave/', { method: 'POST'})
                 .then(res => {
-                    console.log(res)
                     console.log('성공')
+                    alert('엑셀 파일로 저장되었습니다.')
                 })
                 .catch(e => {
                     console.log(e)
@@ -237,16 +237,16 @@
             const items = JSON.parse('{{ items|escapejs }}')
             bunjang = JSON.parse('{{ bunjang|escapejs }}')
             // @TODO parse 내용 바꾸기
-            danggeun = JSON.parse('{{ bunjang|escapejs }}')
-            joongna = JSON.parse('{{ bunjang|escapejs }}')
-            // const danggeun = JSON.parse('{{ danggeun|escapejs }}')
-            // const joongna = JSON.parse('{{ joongna|escapejs }}')
+            // danggeun = JSON.parse('{{ bunjang|escapejs }}')
+            // joongna = JSON.parse('{{ bunjang|escapejs }}')
+            danggeun = JSON.parse('{{ danggeun|escapejs }}')
+            joongna = JSON.parse('{{ joongna|escapejs }}')
 
             
             // 정렬 시 '기본' 정렬에 필요한 기존 데이터 따로 변수에 저장
             originBunjang = JSON.parse('{{ bunjang|escapejs }}')
-            originDanggeun = JSON.parse('{{ bunjang|escapejs }}')
-            originJoongna = JSON.parse('{{ bunjang|escapejs }}')
+            originDanggeun = JSON.parse('{{ danggeun|escapejs }}')
+            originJoongna = JSON.parse('{{ joongna|escapejs }}')
 
             // 페이지 로드시 아이템 리스트 렌더링
             renderItems(bunjang, 'bunjang')
